# cybersorted-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
credentials/: gcp-wif-config.json
fluent-bit/: fluent-bit.conf  parsers.conf
nginx/: nginx.conf
scripts/: init-vm.sh  setup-tls.sh
src/: server.py
src/api/: __init__.py  internal_auth.py  pipeline_router.py  router.py
src/auth/: middleware.py
src/core/: config.py  usage.py
src/jobs/: __init__.py  bridge.py  dispatcher.py  manager.py  models.py
src/pipeline/: companies_house.py  scorer.py
src/tools/recon/: passive.py
src/tools/scanning/: __init__.py  web_application.py
terraform/: main.tf  network.tf  outputs.tf  terraform.tfvars.example  variables.tf  vm.tf
tests/: test_api_router.py  test_bridge.py  test_dispatcher.py  test_internal_auth.py  test_job_manager.py  test_job_models.py  test_recon_passive.py  test_scan_web_application.py
workers/zap/: Dockerfile  agent.py  entrypoint.sh  requirements.txt
